# ions

./: .gitignore  LICENSE  MANIFEST.in  README.md  log  setup.cfg  setup.py  test_err.cif  test_err_n.cif
ions/: __init__.py  calculators.py  data.py  decorate.py  decorator.py  edge.py  geometry.py  percolator.py  periodic_graph.py  potential.py  utils.py
ions/calculators/: bvse_calculator.py  geometric_median_calculator.py  potential.py
ions/data/: Li2O_mp-1960.cif  __init__.py  _collect_data.py  bvparams2020-average.json  bvparams2020-average.pickle  bvparams_averaged2020.csv  bvparm2020.cif  bvparm2020_edit.txt  bvse_data.json  bvse_data.pickle  elneg_data.json  shannon-data-crystal.json  shannon-data-crystal.pickle  shannon-data-ionic.json  shannon-data-ionic.pickle  shannon-radii.pickle
ions/featurizers/: __init__.py  _edge_featurizer.py  _structure_featurizer.py  edge_featurizer.py  structure_featurizer.py
ions/geom/: __init__.py  box.py  edge.py  utils.py
ions/tools/: __init__.py  path_finder.py  percolator.py  perconeb.py  saddle_finder.py
notebooks/: available_data.ipynb  neb_umlip.ipynb
