[metadata]
name = ions
version = attr: ions.utils.__version__
author = Artem Dembitskiy
author_email = art.dembitskiy@gmail.com
url = https://github.com/dembart/ions
description = A python library for studying ionic conductors
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Li-ion, barrier, activation, percolation, ion, ions, crystal, bvse, bvel, neb
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas
    numpy
    ase
    pymatgen
    bvlain
    ions
    tqdm
    spglib
    networkx
    scipy



