[metadata]
name = ions
version = attr: ions._version.__version__
author = Artem Dembitskiy
author_email = art.dembitskiy@gmail.com
url = https://github.com/dembart/ions
description = A python library for studying ionic conductors
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Li-ion, barrier, migration, percolation, ion, ions, crystal, bvse, bvel, NEB
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    ase
    pymatgen
    spglib
    networkx
    scipy



